force-app/main/default/objects/Qualification__c/Qualification__c.object-meta.xml
<CustomObject>
    <label>Qualification</label>
    <nameField>
        <displayFormat>EDU-{0000}</displayFormat>
        <label>Qualification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>