force-app/main/default/objects/Qualification__c/fields/Country_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Study__c</fullName>
    <label>Country of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>