force-app/main/default/objects/Qualification__c/fields/Institution_Name_Others__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name_Others__c</fullName>
    <label>Institution Name (Others)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>