force-app/main/default/objects/Qualification__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <label>Programme Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>